Added profile picture placeholder on profile page

--- a/web/commonfiles/scf.css
+++ b/web/commonfiles/scf.css
@@ -178,3 +178,7 @@ table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sor
 .navbar {
     padding: 0 25px;
 }
+
+.img-circle {
+    border-radius: 50%;
+}
