Comment for previous commit -- Dashboard displayed only on button click. Buttons made responsive

--- a/web/commonfiles/scf-responsive.css
+++ b/web/commonfiles/scf-responsive.css
@@ -52,3 +52,9 @@ a.btn{
     word-wrap:break-word;
     word-break: normal
 }
+
+.btn{
+    white-space:normal !important;
+    word-wrap:break-word;
+    word-break: normal
+}
