Basic search added.

--- a/web/commonfiles/scf-responsive.css
+++ b/web/commonfiles/scf-responsive.css
@@ -58,3 +58,9 @@ a.btn{
     word-wrap:break-word;
     word-break: normal
 }
+
+.auto-height-text-overflow{
+    white-space:normal !important;
+    word-wrap:break-word;
+    word-break: normal
+}
